OEQ-1988 - refactor: use existing dynamic key resource table to store both normal and dynamic key resource