@@ -31,7 +31,7 @@ import com.tle.beans.entity.Schema;
 import com.tle.beans.entity.itemdef.ItemDefinition;
 import com.tle.beans.hierarchy.HierarchyPack;
 import com.tle.beans.hierarchy.HierarchyTopic;
-import com.tle.beans.hierarchy.HierarchyTopicDynamicKeyResources;
+import com.tle.beans.hierarchy.HierarchyTopicKeyResources;
 import com.tle.beans.hierarchy.HierarchyTreeNode;
 import com.tle.beans.item.Item;
 import com.tle.beans.item.ItemId;
@@ -76,6 +76,7 @@ import com.tle.core.services.TaskStatus;
 import com.tle.core.services.impl.BeanClusteredTask;
 import com.tle.core.xml.service.XmlService;
 import com.tle.exceptions.AccessDeniedException;
+import com.tle.web.api.browsehierarchy.HierarchyCompoundUuid;
 import java.io.Serializable;
 import java.net.URL;
 import java.util.ArrayList;
@@ -176,106 +177,43 @@ public class HierarchyServiceImpl
 
   @Override
   @Transactional(propagation = Propagation.REQUIRED)
-  @SecureOnCall(priv = "MODIFY_KEY_RESOURCE")
-  public void addKeyResource(HierarchyTreeNode node, ItemKey itemId) {
-    final HierarchyTopic topic = getHierarchyTopic(node.getId());
-    final Item item = itemService.get(itemId);
-
-    List<Item> list = topic.getKeyResources();
-    if (list == null) {
-      list = new ArrayList<Item>();
-      topic.setKeyResources(list);
-    }
-
-    if (!list.contains(item)) {
-      list.add(item);
-    }
-
-    dao.saveOrUpdate(topic);
+  public void addKeyResource(HierarchyCompoundUuid compoundUuid, ItemKey itemId) {
+    HierarchyTopicKeyResources newKeyResources = new HierarchyTopicKeyResources();
+    newKeyResources.setHierarchyCompoundUuid(compoundUuid.buildString(true));
+    newKeyResources.setItemUuid(itemId.getUuid());
+    newKeyResources.setItemVersion(itemId.getVersion());
+    newKeyResources.setInstitution(CurrentInstitution.get());
+    newKeyResources.setDateCreated(new Date());
+    dao.saveKeyResources(newKeyResources);
   }
 
+  /** Check whether the given item is a key resource of the given hierarchy topic. */
   @Override
-  @Transactional(propagation = Propagation.REQUIRED)
-  public void addKeyResource(String compoundUuid, ItemKey itemId) {
-    final HierarchyTopic topic = getHierarchyTopicByUuid(compoundUuid);
-    final Item item = itemService.get(itemId);
+  public boolean hasKeyResource(HierarchyCompoundUuid compoundUuid, ItemKey itemId) {
+    String itemUuid = itemId.getUuid();
+    int itemVersion = itemId.getVersion();
 
-    // if the hierarchy is dynamic
-    if (topic.getVirtualisationId() != null) {
-      String itemUuid = item.getUuid();
-      int itemVersion = item.getVersion();
-      List<HierarchyTopicDynamicKeyResources> dynamicKeyResources =
-          getDynamicKeyResource(compoundUuid, itemUuid, itemVersion);
-      if (dynamicKeyResources == null) {
-        saveDynamicKeyResource(compoundUuid, itemUuid, itemVersion);
-      } else {
-        for (HierarchyTopicDynamicKeyResources k : dynamicKeyResources) {
-          if (!k.getUuid().equals(itemUuid) || k.getVersion() != itemVersion) {
-            saveDynamicKeyResource(compoundUuid, itemUuid, itemVersion);
-          }
-        }
-      }
-    } else {
-      List<Item> list = topic.getKeyResources();
-      if (list == null) {
-        list = new ArrayList<Item>();
-        topic.setKeyResources(list);
-      }
-
-      if (!list.contains(item)) {
-        list.add(item);
-      }
-      dao.saveOrUpdate(topic);
-    }
-  }
-
-  @Override
-  public boolean hasKeyResource(String compoundUuid, ItemKey itemId) {
-    final HierarchyTopic topic = getHierarchyTopicByUuid(compoundUuid);
-
-    // check if the topic is a virtual topic
-    return Optional.ofNullable(topic.getVirtualisationId())
-        .map(id -> hasDynamicKeyResource(compoundUuid, itemId))
-        .orElseGet(() -> hasNormalKeyResource(topic, itemId));
-  }
-
-  @Transactional
-  private void saveDynamicKeyResource(String dynamicHierarchyId, String itemUuid, int itemVersion) {
-    HierarchyTopicDynamicKeyResources newDynamicKeyResources =
-        new HierarchyTopicDynamicKeyResources();
-    newDynamicKeyResources.setDynamicHierarchyId(dynamicHierarchyId);
-    newDynamicKeyResources.setUuid(itemUuid);
-    newDynamicKeyResources.setVersion(itemVersion);
-    newDynamicKeyResources.setInstitution(CurrentInstitution.get());
-    newDynamicKeyResources.setDateCreated(new Date());
-    dao.saveDynamicKeyResources(newDynamicKeyResources);
+    Optional<HierarchyTopicKeyResources> keyResource =
+        getKeyResource(compoundUuid, itemUuid, itemVersion);
+    return keyResource.isPresent();
   }
 
   @Override
   @Transactional
   public void deleteKeyResources(Item item) {
-    dao.removeReferencesToItem(item);
-    dao.removeDynamicKeyResource(item.getUuid(), item.getVersion(), CurrentInstitution.get());
+    dao.deleteKeyResources(item.getUuid(), item.getVersion(), CurrentInstitution.get());
   }
 
   @Override
   @Transactional
-  public void deleteKeyResources(String compoundUuid, ItemKey itemId) {
-    final HierarchyTopic topic = getHierarchyTopicByUuid(compoundUuid);
-    final Item item = itemService.get(itemId);
-
-    // if the hierarchy is dynamic
-    if (topic.getVirtualisationId() != null) {
-      dao.removeDynamicKeyResource(compoundUuid, item.getUuid(), item.getVersion());
-    } else {
-      dao.removeReferencesToItem(item, topic.getId());
-    }
+  public void deleteKeyResources(HierarchyCompoundUuid compoundUuid, ItemKey itemId) {
+    dao.deleteKeyResource(compoundUuid.buildString(true), itemId.getUuid(), itemId.getVersion());
   }
 
   @Override
   @Transactional
-  public void removeDeletedItemReference(String uuid, int version) {
-    dao.removeDynamicKeyResource(uuid, version, CurrentInstitution.get());
+  public void removeDeletedItemReference(String legacyHierarchyCompoundUuid, int version) {
+    dao.deleteKeyResources(legacyHierarchyCompoundUuid, version, CurrentInstitution.get());
   }
 
   @Override
@@ -286,7 +224,7 @@ public class HierarchyServiceImpl
     LangUtils.setString(nameBundle, CurrentLocale.getLocale(), name);
 
     HierarchyTopic topic = new HierarchyTopic();
-    topic.setId(0l);
+    topic.setId(0L);
     topic.setName(nameBundle);
     topic.setUuid(UUID.randomUUID().toString());
 
@@ -314,7 +252,7 @@ public class HierarchyServiceImpl
   @Transactional(propagation = Propagation.REQUIRED)
   @SecureOnCall(priv = "EDIT_HIERARCHY_TOPIC")
   public long add(HierarchyTopic parent, HierarchyTopic newTopic, int position) {
-    newTopic.setId(0l);
+    newTopic.setId(0L);
     insert(newTopic, parent, position);
     return newTopic.getId();
   }
@@ -358,6 +296,29 @@ public class HierarchyServiceImpl
     dao.deleteAny(oldTopic.getSubtopicsSectionName());
 
     dao.saveOrUpdate(topic);
+  }
+
+  @Override
+  public void updateKeyResources(
+      HierarchyCompoundUuid compoundUuid, List<ItemId> providedKeyResourcesItems) {
+    List<ItemId> existingResources =
+        getKeyResourceItems(compoundUuid).stream().map(Item::getItemId).toList();
+
+    // New key resources not in the original list that need to be added.
+    List<ItemId> newResources =
+        providedKeyResourcesItems.stream()
+            .filter(itemId -> !existingResources.contains(itemId))
+            .toList();
+
+    // Key resource not included in the new provided list which need to be deleted.
+    List<ItemId> deleteResources =
+        existingResources.stream()
+            .filter(itemId -> !providedKeyResourcesItems.contains(itemId))
+            .toList();
+
+    deleteResources.forEach(itemId -> deleteKeyResources(compoundUuid, itemId));
+    newResources.forEach(
+        item -> addKeyResource(compoundUuid, new ItemId(item.getUuid(), item.getVersion())));
   }
 
   private void ensureEditRights(HierarchyTopic topic) {
@@ -588,7 +549,7 @@ public class HierarchyServiceImpl
     if (position >= children.size()) {
       children.add(child); // Add to end
     } else if (position <= 0) {
-      children.add(0, child); // Add to start
+      children.addFirst(child); // Add to start
     } else {
       children.add(position, child); // Add to position
     }
@@ -653,7 +614,7 @@ public class HierarchyServiceImpl
             "createImportTask",
             CurrentUser.getUserState(),
             xml,
-            topicInto == null ? -1l : topicInto.getId(),
+            topicInto == null ? -1L : topicInto.getId(),
             newids,
             useSecurity));
   }
@@ -669,7 +630,7 @@ public class HierarchyServiceImpl
 
     List<Serializable> taskLog = ts.getTaskLog();
     if (!Check.isEmpty(taskLog)) {
-      return ImportStatus.error((ValidationError) taskLog.get(0));
+      return ImportStatus.error((ValidationError) taskLog.getFirst());
     }
 
     if (ts.isFinished()) {
@@ -702,7 +663,7 @@ public class HierarchyServiceImpl
     }
 
     if (ts.isFinished()) {
-      return ExportStatus.finished(((URL) ts.getTaskLog().get(0)).toString());
+      return ExportStatus.finished(((URL) ts.getTaskLog().getFirst()).toString());
     }
 
     return ExportStatus.progress(ts.getDoneWork(), ts.getMaxWork());
@@ -722,7 +683,7 @@ public class HierarchyServiceImpl
   public void itemDeletedEvent(ItemDeletedEvent event) {
     Item item = new Item();
     item.setId(event.getKey());
-    dao.removeReferencesToItem(item);
+    // TODO: OEQ-2051 Delete related key resources
   }
 
   @Override
@@ -757,15 +718,26 @@ public class HierarchyServiceImpl
   }
 
   @Override
-  public List<HierarchyTopicDynamicKeyResources> getDynamicKeyResource(String dynamicHierarchyId) {
-    return dao.getDynamicKeyResource(dynamicHierarchyId, CurrentInstitution.get());
+  public List<HierarchyTopicKeyResources> getKeyResources(HierarchyCompoundUuid compoundUuid) {
+    return dao.getKeyResources(compoundUuid.buildString(true), CurrentInstitution.get());
   }
 
   @Override
-  public List<HierarchyTopicDynamicKeyResources> getDynamicKeyResource(
-      String encodedCompoundUuid, String itemUuid, int itemVersion) {
-    return dao.getDynamicKeyResource(
-        encodedCompoundUuid, itemUuid, itemVersion, CurrentInstitution.get());
+  public List<Item> getKeyResourceItems(HierarchyCompoundUuid compoundUuid) {
+    // HierarchyTopicKeyResources.
+    return getKeyResources(compoundUuid).stream()
+        // ItemId.
+        .map(resources -> new ItemId(resources.getItemUuid(), resources.getItemVersion()))
+        // Item.
+        .flatMap(id -> Optional.ofNullable(itemService.getUnsecureIfExists(id)).stream())
+        .collect(Collectors.toList());
+  }
+
+  @Override
+  public Optional<HierarchyTopicKeyResources> getKeyResource(
+      HierarchyCompoundUuid compoundUuid, String itemUuid, int itemVersion) {
+    return dao.getKeyResource(
+        compoundUuid.buildString(true), itemUuid, itemVersion, CurrentInstitution.get());
   }
 
   @Override
@@ -774,20 +746,10 @@ public class HierarchyServiceImpl
 
     String uuid = item.getUuid();
     int version = item.getVersion();
-    List<HierarchyTopicDynamicKeyResources> dynamicKeyResources =
-        dao.getDynamicKeyResource(uuid, version, CurrentInstitution.get());
-    List<HierarchyTopic> keyResources = dao.findKeyResource(item);
+    List<HierarchyTopicKeyResources> keyResources =
+        dao.getKeyResources(uuid, version, CurrentInstitution.get());
 
-    if (dynamicKeyResources != null) {
-      for (HierarchyTopicDynamicKeyResources k : dynamicKeyResources) {
-        ids.add(k.getDynamicHierarchyId());
-      }
-    }
-    if (keyResources != null) {
-      for (HierarchyTopic h : keyResources) {
-        ids.add(h.getUuid());
-      }
-    }
+    keyResources.forEach(k -> ids.add(k.getHierarchyCompoundUuid()));
     return ids;
   }
 
@@ -805,29 +767,5 @@ public class HierarchyServiceImpl
             .collect(Collectors.toSet());
 
     return Optional.of(allSchema).filter(set -> !set.isEmpty());
-  }
-
-  /**
-   * Check whether the given item is a dynamic key resource of the given hierarchy topic compound
-   * uuid.
-   */
-  private boolean hasDynamicKeyResource(String encodedCompoundUuid, ItemKey itemId) {
-    String itemUuid = itemId.getUuid();
-    int itemVersion = itemId.getVersion();
-    List<HierarchyTopicDynamicKeyResources> dynamicKeyResources =
-        getDynamicKeyResource(encodedCompoundUuid, itemUuid, itemVersion);
-
-    return Stream.ofNullable(dynamicKeyResources)
-        .flatMap(Collection::stream)
-        .map(keyResource -> new ItemId(keyResource.getUuid(), keyResource.getVersion()))
-        .anyMatch(id -> id.equals(itemId));
-  }
-
-  /** Check whether the given item is a key resource of the given hierarchy topic. */
-  private boolean hasNormalKeyResource(HierarchyTopic topic, ItemKey itemId) {
-    return Stream.ofNullable(topic.getKeyResources())
-        .flatMap(Collection::stream)
-        .map(Item::getItemId)
-        .anyMatch(id -> id.equals(itemId));
   }
 }
